added weapons module unit tests